lib/src/duckdb_bindings.dart


  late final _duckdb_function_get_local_init_dataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              duckdb_function_info)>>('duckdb_function_get_local_init_data');
  late final _duckdb_function_get_local_init_data =
      _duckdb_function_get_local_init_dataPtr
          .asFunction<ffi.Pointer<ffi.Void> Function(duckdb_function_info)>();

  void duckdb_function_set_error(
    duckdb_function_info info,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _duckdb_function_set_error(
      info,
      error,
    );
  }

  late final _duckdb_function_set_errorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(duckdb_function_info,
              ffi.Pointer<ffi.Char>)>>('duckdb_function_set_error');
  late final _duckdb_function_set_error = _duckdb_function_set_errorPtr
      .asFunction<void Function(duckdb_function_info, ffi.Pointer<ffi.Char>)>();

  void duckdb_add_replacement_scan(
    duckdb_database db,
    duckdb_replacement_callback_t replacement,
    ffi.Pointer<ffi.Void> extra_data,
    duckdb_delete_callback_t delete_callback,
  ) {
    return _duckdb_add_replacement_scan(
      db,
      replacement,
      extra_data,
      delete_callback,
    );
  }

  late final _duckdb_add_replacement_scanPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              duckdb_database,
              duckdb_replacement_callback_t,
              ffi.Pointer<ffi.Void>,
              duckdb_delete_callback_t)>>('duckdb_add_replacement_scan');
  late final _duckdb_add_replacement_scan =
      _duckdb_add_replacement_scanPtr.asFunction<
          void Function(duckdb_database, duckdb_replacement_callback_t,
              ffi.Pointer<ffi.Void>, duckdb_delete_callback_t)>();

  void duckdb_replacement_scan_set_function_name(
    duckdb_replacement_scan_info info,
    ffi.Pointer<ffi.Char> function_name,
  ) {
    return _duckdb_replacement_scan_set_function_name(
      info,
      function_name,
    );
  }

  late final _duckdb_replacement_scan_set_function_namePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  duckdb_replacement_scan_info, ffi.Pointer<ffi.Char>)>>(
      'duckdb_replacement_scan_set_function_name');
  late final _duckdb_replacement_scan_set_function_name =
      _duckdb_replacement_scan_set_function_namePtr.asFunction<
          void Function(duckdb_replacement_scan_info, ffi.Pointer<ffi.Char>)>();

  void duckdb_replacement_scan_add_parameter(
    duckdb_replacement_scan_info info,
    duckdb_value parameter,
  ) {
    return _duckdb_replacement_scan_add_parameter(
      info,
      parameter,
    );
  }

  late final _duckdb_replacement_scan_add_parameterPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(duckdb_replacement_scan_info,
              duckdb_value)>>('duckdb_replacement_scan_add_parameter');
  late final _duckdb_replacement_scan_add_parameter =
      _duckdb_replacement_scan_add_parameterPtr.asFunction<
          void Function(duckdb_replacement_scan_info, duckdb_value)>();

  void duckdb_replacement_scan_set_error(
    duckdb_replacement_scan_info info,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _duckdb_replacement_scan_set_error(
      info,
      error,
    );
  }

  late final _duckdb_replacement_scan_set_errorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(duckdb_replacement_scan_info,
              ffi.Pointer<ffi.Char>)>>('duckdb_replacement_scan_set_error');
  late final _duckdb_replacement_scan_set_error =
      _duckdb_replacement_scan_set_errorPtr.asFunction<
          void Function(duckdb_replacement_scan_info, ffi.Pointer<ffi.Char>)>();

  int duckdb_appender_create(
    duckdb_connection connection,
    ffi.Pointer<ffi.Char> schema,
    ffi.Pointer<ffi.Char> table,
    ffi.Pointer<duckdb_appender> out_appender,
  ) {
    return _duckdb_appender_create(
      connection,
      schema,
      table,
      out_appender,
    );
  }

  late final _duckdb_appender_createPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              duckdb_connection,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<duckdb_appender>)>>('duckdb_appender_create');
  late final _duckdb_appender_create = _duckdb_appender_createPtr.asFunction<
      int Function(duckdb_connection, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, ffi.Pointer<duckdb_appender>)>();

  ffi.Pointer<ffi.Char> duckdb_appender_error(
    duckdb_appender appender,
  ) {
    return _duckdb_appender_error(
      appender,
    );
  }

  late final _duckdb_appender_errorPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(duckdb_appender)>>(
      'duckdb_appender_error');
  late final _duckdb_appender_error = _duckdb_appender_errorPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(duckdb_appender)>();

  int duckdb_appender_flush(
    duckdb_appender appender,
  ) {
    return _duckdb_appender_flush(
      appender,
    );
  }

  late final _duckdb_appender_flushPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(duckdb_appender)>>(
          'duckdb_appender_flush');
  late final _duckdb_appender_flush =
      _duckdb_appender_flushPtr.asFunction<int Function(duckdb_appender)>();

  int duckdb_appender_close(
    duckdb_appender appender,
  ) {
    return _duckdb_appender_close(
      appender,
    );
  }

  late final _duckdb_appender_closePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(duckdb_appender)>>(
          'duckdb_appender_close');
  late final _duckdb_appender_close =
      _duckdb_appender_closePtr.asFunction<int Function(duckdb_appender)>();

  int duckdb_appender_destroy(
    ffi.Pointer<duckdb_appender> appender,
  ) {
    return _duckdb_appender_destroy(
      appender,
    );
  }

  late final _duckdb_appender_destroyPtr = _lookup<
          ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<duckdb_appender>)>>(
      'duckdb_appender_destroy');
  late final _duckdb_appender_destroy = _duckdb_appender_destroyPtr
      .asFunction<int Function(ffi.Pointer<duckdb_appender>)>();

  int duckdb_appender_begin_row(
    duckdb_appender appender,
  ) {
    return _duckdb_appender_begin_row(
      appender,
    );
  }

  late final _duckdb_appender_begin_rowPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(duckdb_appender)>>(
          'duckdb_appender_begin_row');
  late final _duckdb_appender_begin_row =
      _duckdb_appender_begin_rowPtr.asFunction<int Function(duckdb_appender)>();

  int duckdb_appender_end_row(
    duckdb_appender appender,
  ) {
    return _duckdb_appender_end_row(
      appender,
    );
  }

  late final _duckdb_appender_end_rowPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(duckdb_appender)>>(
          'duckdb_appender_end_row');
  late final _duckdb_appender_end_row =
      _duckdb_appender_end_rowPtr.asFunction<int Function(duckdb_appender)>();

  int duckdb_append_bool(
    duckdb_appender appender,
    bool value,
  ) {
    return _duckdb_append_bool(
      appender,
      value,
    );
  }

  late final _duckdb_append_boolPtr = _lookup<
          ffi.NativeFunction<ffi.Int32 Function(duckdb_appender, ffi.Bool)>>(
      'duckdb_append_bool');
  late final _duckdb_append_bool =
      _duckdb_append_boolPtr.asFunction<int Function(duckdb_appender, bool)>();

  int duckdb_append_int8(
    duckdb_appender appender,
    int value,
  ) {
    return _duckdb_append_int8(
      appender,
      value,
    );
  }

  late final _duckdb_append_int8Ptr = _lookup<
          ffi.NativeFunction<ffi.Int32 Function(duckdb_appender, ffi.Int8)>>(
      'duckdb_append_int8');
  late final _duckdb_append_int8 =
      _duckdb_append_int8Ptr.asFunction<int Function(duckdb_appender, int)>();

  int duckdb_append_int16(
    duckdb_appender appender,
    int value,
  ) {
    return _duckdb_append_int16(
      appender,
      value,
    );
  }

  late final _duckdb_append_int16Ptr = _lookup<
          ffi.NativeFunction<ffi.Int32 Function(duckdb_appender, ffi.Int16)>>(
      'duckdb_append_int16');
  late final _duckdb_append_int16 =
      _duckdb_append_int16Ptr.asFunction<int Function(duckdb_appender, int)>();

  int duckdb_append_int32(
    duckdb_appender appender,
    int value,
  ) {
    return _duckdb_append_int32(
      appender,
      value,
    );
  }

  late final _duckdb_append_int32Ptr = _lookup<
          ffi.NativeFunction<ffi.Int32 Function(duckdb_appender, ffi.Int32)>>(
      'duckdb_append_int32');
  late final _duckdb_append_int32 =
      _duckdb_append_int32Ptr.asFunction<int Function(duckdb_appender, int)>();

  int duckdb_append_int64(
    duckdb_appender appender,
    int value,
  ) {
    return _duckdb_append_int64(
      appender,
      value,
    );
  }

  late final _duckdb_append_int64Ptr = _lookup<
          ffi.NativeFunction<ffi.Int32 Function(duckdb_appender, ffi.Int64)>>(
      'duckdb_append_int64');
  late final _duckdb_append_int64 =
      _duckdb_append_int64Ptr.asFunction<int Function(duckdb_appender, int)>();

  int duckdb_append_hugeint(
    duckdb_appender appender,
    duckdb_hugeint value,
  ) {
    return _duckdb_append_hugeint(
      appender,
      value,
    );
  }

  late final _duckdb_append_hugeintPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              duckdb_appender, duckdb_hugeint)>>('duckdb_append_hugeint');
  late final _duckdb_append_hugeint = _duckdb_append_hugeintPtr
      .asFunction<int Function(duckdb_appender, duckdb_hugeint)>();

  int duckdb_append_uint8(
    duckdb_appender appender,
    int value,
  ) {
    return _duckdb_append_uint8(
      appender,
      value,
    );
  }

  late final _duckdb_append_uint8Ptr = _lookup<
          ffi.NativeFunction<ffi.Int32 Function(duckdb_appender, ffi.Uint8)>>(
      'duckdb_append_uint8');
  late final _duckdb_append_uint8 =
      _duckdb_append_uint8Ptr.asFunction<int Function(duckdb_appender, int)>();

  int duckdb_append_uint16(
    duckdb_appender appender,
    int value,
  ) {
    return _duckdb_append_uint16(
      appender,
      value,
    );
  }

  late final _duckdb_append_uint16Ptr = _lookup<
          ffi.NativeFunction<ffi.Int32 Function(duckdb_appender, ffi.Uint16)>>(
      'duckdb_append_uint16');
  late final _duckdb_append_uint16 =
      _duckdb_append_uint16Ptr.asFunction<int Function(duckdb_appender, int)>();

  int duckdb_append_uint32(
    duckdb_appender appender,
    int value,
  ) {
    return _duckdb_append_uint32(
      appender,
      value,
    );
  }

  late final _duckdb_append_uint32Ptr = _lookup<
          ffi.NativeFunction<ffi.Int32 Function(duckdb_appender, ffi.Uint32)>>(
      'duckdb_append_uint32');
  late final _duckdb_append_uint32 =
      _duckdb_append_uint32Ptr.asFunction<int Function(duckdb_appender, int)>();

  int duckdb_append_uint64(
    duckdb_appender appender,
    int value,
  ) {
    return _duckdb_append_uint64(
      appender,
      value,
    );
  }

  late final _duckdb_append_uint64Ptr = _lookup<
          ffi.NativeFunction<ffi.Int32 Function(duckdb_appender, ffi.Uint64)>>(
      'duckdb_append_uint64');
  late final _duckdb_append_uint64 =
      _duckdb_append_uint64Ptr.asFunction<int Function(duckdb_appender, int)>();

  int duckdb_append_float(
    duckdb_appender appender,
    double value,
  ) {
    return _duckdb_append_float(
      appender,
      value,
    );
  }

  late final _duckdb_append_floatPtr = _lookup<
          ffi.NativeFunction<ffi.Int32 Function(duckdb_appender, ffi.Float)>>(
      'duckdb_append_float');
  late final _duckdb_append_float = _duckdb_append_floatPtr
      .asFunction<int Function(duckdb_appender, double)>();

  int duckdb_append_double(
    duckdb_appender appender,
    double value,
  ) {
    return _duckdb_append_double(
      appender,
      value,
    );
  }
